Checked in By: Bhavesh Nechlani Reason: 1) Fixed duplicate element error